fixed spacing

--- a/_sass/_07_layout.scss
+++ b/_sass/_07_layout.scss
@@ -226,6 +226,10 @@ body.video cite { color: #fff; }
   margin-bottom: 200px;
 }
 
+.small-spacer {
+  margin-bottom: 24px !important;
+}
+
 .bg-gradient {
   background-image: linear-gradient(0deg,rgba(81,160,131,0.85) 0%,rgba(57,130,144,0.85) 50%,rgba(32,99,156,0.85) 100%);
   background-size: cover;
